--- a/header.html
+++ b/header.html
@@ -2,9 +2,9 @@
 	<h1>Simon®</h1>
 	<ul>
 		<li><a href="/index.html">Home</a></li>
-		<li><a href="/Play.html">Play</a></li>
-		<li><a href="/Scores.html">Scores</a></li>
-		<li><a href="/About.html">About</a></li>
+		<li><a href="/play.html">Play</a></li>
+		<li><a href="/scores.html">Scores</a></li>
+		<li><a href="/about.html">About</a></li>
 	</ul>
 	<hr />
 </header>
