--- a/play.html
+++ b/play.html
@@ -6,7 +6,15 @@
 		<meta http-equiv="Pragma" content="no-cache" />
 		<meta http-equiv="Cache-Control" content="no-store" />
 		<link rel="icon" href="favicon.ico" />
+		<link rel="stylesheet" href="main.css" />
 		<title>Simon (wkp23)</title>
+		<!-- Include bootstrap CSS framework -->
+		<link
+			href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
+			rel="stylesheet"
+			integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
+			crossorigin="anonymous"
+		/>
 		<script
 			src="https://code.jquery.com/jquery-3.3.1.js"
 			integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
@@ -14,93 +22,36 @@
 		></script>
 		<script>
 			$(function () {
-				$("#header").load("header.html");
+				$("#header").load("header.html", function () {
+					$("#play-link").addClass("active");
+				});
 				$("#footer").load("footer.html");
 			});
 		</script>
 	</head>
-	<body>
-		<div id="header"></div>
+	<body class="bg-dark text-light">
+		<header id="header" class="container-fluid"></header>
 		<!-- Put Main code in here -->
-		<main>
+		<main class="bg-secondary">
 			<div class="players">
 				Player:
 				<span class="player-name">Mystery player</span>
 			</div>
-
-			<br />
-
-			<div>
-				<label for="count">Score</label>
-				<input type="text" id="count" value="--" readonly />
-			</div>
-
-			<br />
-
-			<div>
-				<button>Reset</button>
-			</div>
-
-			<br />
-
-			<div>
-				<table>
-					<tr>
-						<td>
-							<button>
-								<svg
-									aria-hidden="true"
-									viewBox="0 0 100 100"
-									height="100"
-									width="100"
-								>
-									<path d="M 95,5 95,95 5,95 Q 5,5 95,5" fill="green" />
-								</svg>
-							</button>
-						</td>
-						<td>
-							<button>
-								<svg
-									aria-hidden="true"
-									viewBox="0 0 100 100"
-									height="100"
-									width="100"
-								>
-									<path d="M5,5 5,95 95,95 Q 95,5 5,5" fill="red" />
-								</svg>
-							</button>
-						</td>
-					</tr>
-					<tr>
-						<td>
-							<button>
-								<svg
-									aria-hidden="true"
-									viewBox="0 0 100 100"
-									height="100"
-									width="100"
-								>
-									<path d="M5,5 95,5 95,95 Q 5,95 5,5" fill="blue" />
-								</svg>
-							</button>
-						</td>
-						<td>
-							<button>
-								<svg
-									aria-hidden="true"
-									viewBox="0 0 100 100"
-									height="100"
-									width="100"
-								>
-									<path d="M95,5 5,5 5,95 Q 95,95 95,5" fill="yellow" />
-								</svg>
-							</button>
-						</td>
-					</tr>
-				</table>
+			<div class="game">
+				<div class="button-container">
+					<button class="button-top-left"></button>
+					<button class="button-top-right"></button>
+					<button class="button-bottom-left"></button>
+					<button class="button-bottom-right"></button>
+					<div class="controls center">
+						<div class="game-name">Simon<sup>&reg;</sup></div>
+						<div class="score center">--</div>
+						<button class="btn btn-primary">Reset</button>
+					</div>
+				</div>
 			</div>
 		</main>
 		<!-- Don't put code below here -->
-		<div id="footer"></div>
+		<footer id="footer" class="bg-dark text-dark text-muted"></footer>
 	</body>
 </html>
