--- a/scores.html
+++ b/scores.html
@@ -6,7 +6,15 @@
 		<meta http-equiv="Pragma" content="no-cache" />
 		<meta http-equiv="Cache-Control" content="no-store" />
 		<link rel="icon" href="favicon.ico" />
+		<link rel="stylesheet" href="main.css" />
 		<title>Simon (wkp23)</title>
+		<!-- Include bootstrap CSS framework -->
+		<link
+			href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
+			rel="stylesheet"
+			integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
+			crossorigin="anonymous"
+		/>
 		<script
 			src="https://code.jquery.com/jquery-3.3.1.js"
 			integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
@@ -14,17 +22,19 @@
 		></script>
 		<script>
 			$(function () {
-				$("#header").load("header.html");
+				$("#header").load("header.html", function () {
+					$("#scores-link").addClass("active");
+				});
 				$("#footer").load("footer.html");
 			});
 		</script>
 	</head>
-	<body>
-		<div id="header"></div>
+	<body class="bg-dark text-light">
+		<header id="header" class="container-fluid"></header>
 		<!-- Put Main code in here -->
-		<main>
-			<table>
-				<thead>
+		<main class="container-fluid bg-secondary text-center">
+			<table class="table table-warning table-striped-columns">
+				<thead class="table-dark">
 					<tr>
 						<th>#</th>
 						<th>Name</th>
@@ -67,6 +77,6 @@
 			</table>
 		</main>
 		<!-- Don't put code below here -->
-		<div id="footer"></div>
+		<footer id="footer" class="bg-dark text-dark text-muted"></footer>
 	</body>
 </html>
