--- a/footer.html
+++ b/footer.html
@@ -1,8 +1,4 @@
-<footer>
-	<hr />
-	<p>
-		William Pendleton<br /><a href="https://github.com/wpendl99/simon"
-			>GitHub</a
-		>
-	</p>
-</footer>
+<div class="container-fluid">
+	<span class="text-reset">William Pendleton</span>
+	<a class="text-reset" href="https://github.com/wpendl99/simon">Source</a>
+</div>
