--- a/header.html
+++ b/header.html
@@ -1,10 +1,17 @@
-<header>
-	<h1>Simon®</h1>
-	<ul>
-		<li><a href="/index.html">Home</a></li>
-		<li><a href="/play.html">Play</a></li>
-		<li><a href="/scores.html">Scores</a></li>
-		<li><a href="/about.html">About</a></li>
-	</ul>
-	<hr />
-</header>
+<nav class="navbar fixed-top navbar-dark">
+	<a class="navbar-brand" href="#">Simon<sup>&reg;</sup></a>
+	<menu class="navbar-nav">
+		<li class="nav-item">
+			<a class="nav-link" href="index.html" id="index-link">Home</a>
+		</li>
+		<li class="nav-item">
+			<a class="nav-link" href="play.html" id="play-link">Play</a>
+		</li>
+		<li class="nav-item">
+			<a class="nav-link" href="scores.html" id="scores-link">Scores</a>
+		</li>
+		<li class="nav-item">
+			<a class="nav-link" href="about.html" id="about-link">About</a>
+		</li>
+	</menu>
+</nav>
