Updating html to include js

--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
 		<meta http-equiv="Pragma" content="no-cache" />
 		<meta http-equiv="Cache-Control" content="no-store" />
 		<link rel="icon" href="favicon.ico" />
-		<link rel="stylesheet" href="main.css" />
+		<link rel="stylesheet" href="./main.css" />
 		<title>Simon (wkp23)</title>
 		<!-- Include bootstrap CSS framework -->
 		<link
