--- a/play.html
+++ b/play.html
@@ -6,7 +6,7 @@
 		<meta http-equiv="Pragma" content="no-cache" />
 		<meta http-equiv="Cache-Control" content="no-store" />
 		<link rel="icon" href="favicon.ico" />
-		<link rel="stylesheet" href="main.css" />
+		<link rel="stylesheet" href="./main.css" />
 		<title>Simon (wkp23)</title>
 		<!-- Include bootstrap CSS framework -->
 		<link
@@ -35,23 +35,46 @@
 		<main class="bg-secondary">
 			<div class="players">
 				Player:
-				<span class="player-name">Mystery player</span>
+				<span class="player-name"></span>
 			</div>
 			<div class="game">
 				<div class="button-container">
-					<button class="button-top-left"></button>
-					<button class="button-top-right"></button>
-					<button class="button-bottom-left"></button>
-					<button class="button-bottom-right"></button>
+					<!-- buttons are discovered in the JavaScript by selecting the game-button class -->
+					<!-- onclick triggers a button push interaction -->
+					<button
+						id="green"
+						class="game-button button-top-left"
+						onclick="game.pressButton(this)"
+					></button>
+					<button
+						id="red"
+						class="game-button button-top-right"
+						onclick="game.pressButton(this)"
+					></button>
+					<button
+						id="yellow"
+						class="game-button button-bottom-left"
+						onclick="game.pressButton(this)"
+					></button>
+					<button
+						id="blue"
+						class="game-button button-bottom-right"
+						onclick="game.pressButton(this)"
+					></button>
 					<div class="controls center">
 						<div class="game-name">Simon<sup>&reg;</sup></div>
-						<div class="score center">--</div>
-						<button class="btn btn-primary">Reset</button>
+						<div id="score" class="score center">--</div>
+						<button class="btn btn-primary" onclick="game.reset()">
+							Reset
+						</button>
 					</div>
 				</div>
 			</div>
 		</main>
 		<!-- Don't put code below here -->
 		<footer id="footer" class="bg-dark text-dark text-muted"></footer>
+
+		<!-- Script is located at the bottom because it references HTML elements during initialization -->
+		<script src="play.js"></script>
 	</body>
 </html>
