--- a/scores.html
+++ b/scores.html
@@ -6,7 +6,7 @@
 		<meta http-equiv="Pragma" content="no-cache" />
 		<meta http-equiv="Cache-Control" content="no-store" />
 		<link rel="icon" href="favicon.ico" />
-		<link rel="stylesheet" href="main.css" />
+		<link rel="stylesheet" href="./main.css" />
 		<title>Simon (wkp23)</title>
 		<!-- Include bootstrap CSS framework -->
 		<link
@@ -42,41 +42,12 @@
 						<th>Date</th>
 					</tr>
 				</thead>
-				<tbody>
-					<tr>
-						<td>1</td>
-						<td>Amy Rodriguez</td>
-						<td>42</td>
-						<td>May 20, 2021</td>
-					</tr>
-					<tr>
-						<td>2</td>
-						<td>Jack Chen</td>
-						<td>39</td>
-						<td>June 12, 2021</td>
-					</tr>
-					<tr>
-						<td>3</td>
-						<td>Evelyn Lee</td>
-						<td>37</td>
-						<td>July 6, 2021</td>
-					</tr>
-					<tr>
-						<td>4</td>
-						<td>James Watson</td>
-						<td>33</td>
-						<td>May 31, 2021</td>
-					</tr>
-					<tr>
-						<td>5</td>
-						<td>Sarah Jackson</td>
-						<td>25</td>
-						<td>June 5, 2021</td>
-					</tr>
-				</tbody>
+				<tbody id="scores"></tbody>
 			</table>
 		</main>
 		<!-- Don't put code below here -->
 		<footer id="footer" class="bg-dark text-dark text-muted"></footer>
+
+		<script src="scores.js"></script>
 	</body>
 </html>
